--- a/xhtml/css/style.css
+++ b/xhtml/css/style.css
@@ -1121,6 +1121,26 @@ font-style: italic;
 	-webkit-transition-delay: 0.6s;
 			transition-delay: 0.6s;
   }
+  .menu .menu__item:nth-child(7) {
+	-webkit-transition-delay: 0.2s;
+			transition-delay: 0.2s;
+  }
+  .menu .menu__item:nth-child(8) {
+	-webkit-transition-delay: 0.3s;
+			transition-delay: 0.3s;
+  }
+  .menu .menu__item:nth-child(9) {
+	-webkit-transition-delay: 0.4s;
+			transition-delay: 0.4s;
+  }
+  .menu .menu__item:nth-child(10) {
+	-webkit-transition-delay: 0.5s;
+			transition-delay: 0.5s;
+  }
+  .menu .menu__item:nth-child(11) {
+	-webkit-transition-delay: 0.6s;
+			transition-delay: 0.6s;
+  }
   
   @media screen and (max-width: 768px) {
 	ul.menu__list,
